# dl_research

./: LICENSE  README.md
genetic_algo/: CMakeLists.txt
genetic_algo/include/: gen_alg.h  genetic_optimizer.h  genome.h  gray_code.h  offspring.h  pass.h  rng.h
genetic_algo/src/: main.cpp
genetic_algo/test/: CMakeLists.txt  gray_code.cpp
